Mainpage structure and css basic done
Changed:
-index -> mainpage
-structure done
-link between css establishes
-CSS file added styling for headline but not workling

--- a/index/mainpage.html
+++ b/index/mainpage.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>MemeRoleTest</title>
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <title>Meme Role Tester</title>
+        <link rel="stylesheet" type="text/css" href="stylesheet/style.css">
     </head>
     
     <body>
-        <h1>Meme Role Tester</h1>
-        <div>
+        <h1 id="headline">MEME ROLE TESTER</h1> 
+        <div id="divIntroBox">
             <p>Dieser Test ermittelt die Memeness des Zutestendensneee.</p>
             <p>Es wird in folgenden Kategoriern gestestet:</p>
             <ol>
@@ -27,7 +27,17 @@
                     <li>Boomer-Shooter(1.Doom, 2.Serious Sam, 3.Duke Nukem)</li>
                 </ul>
             </ol>
-        </div>    
-    </body>
+            <p>Die Boni geben insgesamt 10 Punkte auf die Gesamtwertung und sind für Meme-God notwendig</p>
+        </div>
+        
+        <div id="buttons">
+            <a href="https://discord.gg/BzUgqpQzrm"><button>Discord</button></a>
+            <a href="https://github.com/Zommer2108/MemeRoleTest"><button>GitHub-Project</button></a>
+            <a href="https://www.youtube.com/watch?v=_YAJxvTQxAA"><button>Donation/BuyMeACoffe</button></a>
+        </div>
 
+        <div id="continue">
+            <button>WEITER</button>
+        </div>
+    </body>
 </html>
