--- a/index/mainpage.html
+++ b/index/mainpage.html
@@ -36,8 +36,6 @@
             <a href="https://www.youtube.com/watch?v=_YAJxvTQxAA"><button>Donation/BuyMeACoffe</button></a>
         </div>
 
-        <div id="continue">
-            <button>WEITER</button>
-        </div>
+            <button id="continueButton">WEITER</button>
     </body>
 </html>
