Folders removed and added stylaziation
Changed:
-removed folders "index" and "stylesheets" because they caused issues with style.css
-changed font to the funny
-altered divintro box to have a border

TODO:
finish stylazastion

--- a/mainpage.html
+++ b/mainpage.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html> 
     <head>
         <title>Meme Role Tester</title>
-        <link rel="stylesheet" type="text/css" href="stylesheet/style.css">
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     
     <body>
@@ -24,7 +24,7 @@
                 <ul>
                     <li>Drachengame</li>
                     <li>Politik + Geschichte</li>
-                    <li>Boomer-Shooter(1.Doom, 2.Serious Sam, 3.Duke Nukem)</li>
+                    <li>Boomer-Shooter (1.Doom, 2.Serious Sam, 3.Duke Nukem)</li>
                 </ul>
             </ol>
             <p>Die Boni geben insgesamt 10 Punkte auf die Gesamtwertung und sind für Meme-God notwendig</p>
@@ -36,6 +36,6 @@
             <a href="https://www.youtube.com/watch?v=_YAJxvTQxAA"><button>Donation/BuyMeACoffe</button></a>
         </div>
 
-            <button id="continueButton">WEITER</button>
+            <a href="#"></a><button id="continueButton">WEITER</button>
     </body>
 </html>
